--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -255,7 +255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2) Image Prediction Data:"
+    "## 2) Image Prediction his Data:"
    ]
   },
   {
